--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,21 +28,25 @@ body {
 
     li {
         padding-left: 10px;
-        color: #333 !important;
+        color: #333;
         &:hover {
             background-color: #e9e9e9;
         }
         a {
-            font-weight: 600 !important;
-            padding-left: 5px !important;
-            color: #333 !important;
+            font-weight: 600;
+            padding-left: 5px;
+            color: #333;
             .sidebarIcon {
                 margin-right: 0.5rem;
             }
         }
+
+        .active {
+            color: #29f !important;
+        }
     }
 
     h6 {
-        padding-left: 0.5rem !important;
+        padding-left: 0.5rem;
     }
 }
