--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,19 +25,18 @@ body {
 
 .sidebar {
     font-size: 14px;
-
+    margin-top: 50px;
     li {
-        padding-left: 10px;
-        color: #333;
-        &:hover {
-            background-color: #e9e9e9;
-        }
         a {
             font-weight: 600;
             padding-left: 5px;
             color: #333;
             .sidebarIcon {
                 margin-right: 0.5rem;
+            }
+
+            &:hove {
+                color: #eee;
             }
         }
 
@@ -49,4 +48,8 @@ body {
     h6 {
         padding-left: 0.5rem;
     }
+}
+
+.main-body {
+    margin-top: 50px !important;
 }
